UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Charge_Back_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Charge Back Data</relationshipLabel>
        <relationshipName>Charge_Back_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Units_Paid_Qty__c</fullName>
        <label>Contract Units Paid Qty</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Definitive_Id__c</fullName>
        <label>Definitive Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Count__c</fullName>
        <label>Interaction Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Details__c</fullName>
        <label>Month Details</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Chargeback_Amount__c</fullName>
        <label>Paid Chargeback Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <label>SAP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Desc__c</fullName>
        <label>SKU Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Charge Back Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGD-{0}</displayFormat>
        <label>Charge Back Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Back Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>